syntax = "proto3";
package openim.sdk.third;

import "any.proto";
import "common.proto";

option csharp_namespace = "OpenIM.Proto";
option go_package = "github.com/openimsdk/openim-sdk-core/v3/proto/go/third";
option swift_prefix = "";

message UpdateFcmTokenReq {
  // fcm token
  string fcmToken = 1;
  // expire time
  int64 expireTime = 2;
}
message UpdateFcmTokenResp {}

message SetAppBadgeReq {
  // app unread count
  int32 appUnreadCount = 1;
}
message SetAppBadgeResp {}

message UploadFileReq {
  // file path
  string filepath = 1;
  // file name
  string name = 2;
  // http mime type
  string mimeType = 3;
  // file category
  string fileCategory = 4;
}
message UploadFileResp {
  // file url
  string url = 1;
}

message UploadSDKDataReq {
  // upload line
  int32 line = 1;
  // upload extension fields
  string ex = 2;
  // upload mode
  common.UploadSDKDataMode mode = 3;
}
message UploadSDKDataResp {}

message LogKv {
  // key
  string key = 1;
  // value
  google.protobuf.Any value = 2;
}

message LogReq {
  // log level
  common.LogLevel logLevel = 1;
  // log file path
  string file = 2;
  // log line
  int32 line = 3;
  // log message
  string msg = 4;
  // log error message
  string err = 5;
  // log key-value pairs
  repeated LogKv kvs = 6;
}
message LogResp {}

service ThirdService {
  /**
   * when uploading files to s3, the file stream will not pass through the api server.
   * in the js environment, filepath is a file object
   */
  rpc UploadFile(UploadFileReq) returns (UploadFileResp);
  // TODO
  /**
   * upload sdk data
   */
  rpc UploadSDKData(UploadSDKDataReq) returns (UploadSDKDataResp);
  // TODO
  /**
   * upload log
   */
  rpc Log(LogReq) returns (LogResp);
  /**
   * update Fcm token
   */
  rpc UpdateFcmToken(UpdateFcmTokenReq) returns (UpdateFcmTokenResp);
  /**
   * set app badge, including unread count
   */
  rpc SetAppBadge(SetAppBadgeReq) returns (SetAppBadgeResp);
}
